configurar la pagina de single y post y crear el formulario de consulta

--- a/Single_post.html
+++ b/Single_post.html
@@ -49,9 +49,10 @@
             </div>
             <h1>The impact of Technology on the Workplace:</h1>
             <h1>How Technology is Changing</h1>
+            <div class="my-4">
+                <p class="tracey"><img src="img/Image (6).png" alt="">Tracey Wilson August 20, 2022</p>
+            </div>
         </div>
-        <div class="my-4">
-            <p class="tracey"><img src="img/Image (6).png" alt="">Tracey Wilson August 20, 2022</p>
         <div class="single_post">
             <img class="rounded-4 img-fluid mb-4" src="/img/Image (7).png" alt="">
             <div class="text_single_post">
@@ -64,12 +65,14 @@
             <h5>Plan Your Itinerary</h5>
             <p>While it's essential to leave room for spontaneity and unexpected adventures, having a rough itinerary can help you make the most of your time and budget. Identify the must-see sights and experiences and prioritize them according to your interests and preferences. This will help you avoid overscheduling and ensure that you have time to relax and enjoy your journey.</p>
             <p>Vitae sapien pellentesque habitant morbi tristique. Luctus venenatis lectus magna fringilla. Nec ullamcorper sit amet risus nullam eget felis. Tincidunt arcu non sodales neque sodales ut etiam sit amet.</p>
-            <div class="advertisment border border-black-start">
+            <div class="advertismento">
                 <p>“ Traveling can expose you to new environments and potential health risks, so it's crucial to take precautions to stay safe and healthy. ”</p>
             </div>
         </div>
         <div>
-            <img class="rounded-4 img-fluid mb-4" src="/img/Image (8).png" alt="">
+            <div class="imagen87">
+                <img class="rounded-4 img-fluid mb-4" src="/img/Image (8).png" alt="">
+            </div>
                 <div class="advertisment_2">
                     <p >Advertisement</p>
                     <h6><strong>You can place ads</strong></h6>
