--- a/contacte.html
+++ b/contacte.html
@@ -40,25 +40,28 @@
     </div>
 </nav>
 <body>
-    <form action="contacte">
-        <div>
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
+    <div class="form-container">
+        <h2>Consultanos tus dudas</h2>
+        <div class="form-container">
+            <h2>Contact Us</h2>
+            <form action="#" method="post">
+                <div class="form-group">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" placeholder="Enter your name" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" placeholder="Enter your email" required>
+                </div>
+                <div class="form-group">
+                    <label for="message">Message:</label>
+                    <textarea id="message" name="message" rows="5" placeholder="Enter your message" required></textarea>
+                </div>
+                <button type="submit" class="btn-submit">Submit</button>
+            </form>
+            <a href="/" class="back-link">Back to Home</a>
         </div>
-        <div>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-        </div>
-        <div>
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" rows="5" required></textarea>
-        </div>
-        <div>
-            <button type="submit">Submit</button>
-        </div>
-        <div>
-            <a href="index.html">Back to Home</a>
-        </div>
-    </form>
+        
+    </div>
 </body>
 </html>
