--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     </header>
     <main>
         <div>
-            <div class="image-wrapper">
-                <img src="img/Image.png" alt="imagen" class="Imagen">
+            <div>
+                <img class="rounded-4 img-fluid mb-4" src="img/Image.png" alt="imagen" class="Imagen">
             </div>
         <div class="conateier">
             <div>
