--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 </div>
                 <div class="navbar-nav">
                     <a class="nav-link"  href="#">Home</a>
-                    <a class="nav-link" href="/author_page.html">Blog</a>
-                    <a class="nav-link active" aria-current="page" href="/Single_post.html">Single Post</a>
-                    <a class="nav-link" href="/contacte.html">Contacto</a>
+                    <a class="nav-link" href="author_page.html">Blog</a>
+                    <a class="nav-link active" aria-current="page" href="Single_post.html">Single Post</a>
+                    <a class="nav-link" href="contacte.html">Contacto</a>
                 </div>
                 <div class="d-flex flex-row">
                     <div>
