--- a/contacte.html
+++ b/contacte.html
@@ -61,7 +61,7 @@
             </form>
             <a href="/" class="back-link">Back to Home</a>
         </div>
-        
     </div>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3074.1586716387656!2d2.6867547115867714!3d39.60110797146384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1297935d441c9571%3A0xa01dc49e4565742f!2sEs%20Liceu!5e0!3m2!1ses!2ses!4v1737025468360!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </body>
 </html>
