--- a/Single_post.html
+++ b/Single_post.html
@@ -20,10 +20,10 @@
                     <a class="navbar-brand" href="#">Meta<strong>Blog</strong></a>
                 </div>
                 <div class="navbar-nav">
-                    <a class="nav-link"  href="#">Home</a>
-                    <a class="nav-link" href="#">Blog</a>
-                    <a class="nav-link active" aria-current="page" href="#">Single Post</a>
-                    <a class="nav-link" href="#">Pages</a>
+                    <a class="nav-link"  href="./index.html">Home</a>
+                    <a class="nav-link" href="./author_page.html">Blog</a>
+                    <a class="nav-link active" aria-current="page" href="./Single_post.html">Single Post</a>
+                    <a class="nav-link" href="./contacte.html">Contacte</a>
                 </div>
                 <div class="d-flex flex-row">
                     <div>
