--- a/contacte.html
+++ b/contacte.html
@@ -63,6 +63,8 @@
             <a href="/" class="back-link">Back to Home</a>
         </div>
     </div>
-    <iframe class="pt-5" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3074.1586716335128!2d2.6867600766279573!3d39.60110797158234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1297935d441c9571%3A0xa01dc49e4565742f!2sEs%20Liceu!5e0!3m2!1ses!2ses!4v1736942475470!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <div class="mapa">
+        <iframe class="pt-5" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3074.1586716335128!2d2.6867600766279573!3d39.60110797158234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1297935d441c9571%3A0xa01dc49e4565742f!2sEs%20Liceu!5e0!3m2!1ses!2ses!4v1736942475470!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
 </body>
 </html>
