--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 </ul>
             </nav>
         </div>
-        <div class="col-4 container bg-light-subtle rounded">
+        <div class="col-4 container bg-light-subtle rounded-4">
             <h5>Weekly newsletter</h5>
             <p>Get blog articles and offers via email!</p>
             <form>
@@ -261,7 +261,7 @@
         <div class="col-4">
             <div>
                 <button class="border border-0">
-                    <img src="img/Logo.png" alt="">
+                    <img src="img/Logo2.png" alt="">
                 </button>                    
                 <a class="navbar-brand" href="#">Meta<strong>Blog</strong></a>
                 <p>© 2022 JSTemplate. All rights reserved.</p>
