--- a/contacte.html
+++ b/contacte.html
@@ -66,4 +66,70 @@
     <div class="mapa">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3074.1586716387656!2d2.6867547115867714!3d39.60110797146384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1297935d441c9571%3A0xa01dc49e4565742f!2sEs%20Liceu!5e0!3m2!1sca!2ses!4v1737103493777!5m2!1sca!2ses" width="1300" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>    </div>
 </body>
+<footer class="bg-body-tertiary border">
+    <div class="row container-fluid d-flex justify-content-around text-center p-5 mb-5">
+        <div class="col-4 text-start">
+            <h5>About</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia voluptates molestiae blanditiis magnam odit, hic sed quo earum delectus, ratione, nesciunt ea pariatur obcaecati voluptatum quaerat iusto molestias esse saepe.</p>
+            <p><strong>Email:</strong> info@jstemplate.net</p>
+            <p><strong>Phone:</strong> 880 123 456 789</p>
+        </div>
+        <div class="col-2">
+            <h5>Quick Link</h5>
+            <nav class="navbar justify-content-center">
+                <ul class="navbar-nav">
+                    <li><a class="nav-link" href="#">Home</a></li>
+                    <li><a class="nav-link" href="#">About</a></li>
+                    <li><a class="nav-link" href="#">Blog</a></li>
+                    <li><a class="nav-link" href="#">Archieved</a></li>
+                    <li><a class="nav-link" href="#">Author</a></li>
+                    <li><a class="nav-link" href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="col-2">
+            <h5>Category</h5>
+            <nav class="navbar justify-content-center">
+                <ul class="navbar-nav">
+                    <li><a class="nav-link" href="#">Lifestyle</a></li>
+                    <li><a class="nav-link" href="#">Technology</a></li>
+                    <li><a class="nav-link" href="#">Travel</a></li>
+                    <li><a class="nav-link" href="#">Business</a></li>
+                    <li><a class="nav-link" href="#">Economy</a></li>
+                    <li><a class="nav-link" href="#">Sports</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="col-4 container bg-light-subtle rounded">
+            <h5>Weekly newsletter</h5>
+            <p>Get blog articles and offers via email!</p>
+            <form>
+                <div class="input-group input-group-lg mb-1">
+                    <input type="email" class="form-control" id="subscribeEmail" placeholder="Enter your email">
+                </div>
+                <div class="d-grid gap-2">
+                    <button type="submit" class="btn btn-primary btn-lg">Subscribe</button>
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="row container-fluid  border-top mt-5 py-3">
+        <div class="col-4">
+            <div>
+                <button class="border border-0">
+                    <img src="img/Logo.png" alt="">
+                </button>                    
+                <a class="navbar-brand" href="#">Meta<strong>Blog</strong></a>
+                <p>© 2022 JSTemplate. All rights reserved.</p>
+            </div>
+        </div>
+        <div class="col-3 float-end">
+            <nav class="navbar">
+                <a href="#" class="nav-link">Terms of Use</a>
+                <a href="#" class="nav-link">Privacy Policy</a>
+                <a href="#" class="nav-link">Cookies Policy</a>
+            </nav>
+        </div>
+    </div>
+</footer>
 </html>
